chore: Fix rmf spacing

--- a/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
+++ b/special-pages/pages/new-tab/app/remote-messaging-framework/components/RemoteMessagingFramework.module.css
@@ -37,7 +37,7 @@
 .title {
     font-weight: var(--title-2-font-weight);
     line-height: normal;
-    margin-bottom: var(--sp-2);
+    margin-bottom: var(--sp-1);
 }
 
 .description {
